# mlfq

./: .gdb_history  .gitinit  .prog2.c.swp  CMakeLists.txt  Makefile  README.md  RR.c  a.out  main  main.c  mlfq.c  mlfq.h  print-err.h  prioque.c  prioque.h  process.c  process.h  processes.txt  prog2.c  queue.c  queue.h
RR/: CMakeLists.txt  RR.c  RR.h  process.c  process.h
queue/: CMakeLists.txt  queue.h  sample.c
